[#4 Update navbar scss]

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,21 @@
+/* 기본 셋업 */
+header, section, article, aside, footer, main,
+a, button, input, textarea,
+img, nav,
+ul, ol, li, 
+p,
+h1, h2, h3, h4, h5, h6,
+div, span {
+  margin: 0;
+  padding: 0;
+
+  /* 폰트 크기 상속 */
+  font-size: inherit;
+}
+li{
+  list-style: none;
+}
+
 a {
   text-decoration: none;
   color: black;
@@ -16,7 +34,4 @@ a:active {
   text-decoration: none;
 }
 
-.body{
-  max-width: 1281px;
-  margin: 0 auto;
-}
+
