--- a/src/pages/DetailPage.scss
+++ b/src/pages/DetailPage.scss
@@ -9,9 +9,11 @@
   column-gap: 20px;
 
   .detail-left {
+    width: 100%;
+    min-width: 300px;
     img {
       width: 100%;
-      height: auto;
+      max-height: 400px;
       margin-bottom: 30px;
     }
 
@@ -22,29 +24,78 @@
       margin-bottom: 30px;
     }
 
-    .detail-category {
+    .detail-categories {
       width: 100%;
-      height: 30px;
-      border: 0.5px solid black;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
 
       display: flex;
-      justify-content: space-evenly;
-      align-items: center;
+      overflow-x: scroll;
 
-      border: 1px solid red;
-      border-radius: ;
+      padding-bottom: 20px;
+      border-bottom: 2px solid #eeeeee;
+
+      .detail-category {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        p {
+          font-size: 1.2rem;
+          font-weight: bold;
+        }
+      }
     }
 
-    .detail-menu {
-      width: 100%;
-      height: 100px;
-      border: 0.5px solid black;
-      margin-bottom: 30px;
+    .detail-categories::-webkit-scrollbar {
+      display: none;
+    }
+
+    .detail-menus {
+      .detail-menus-category {
+        margin: 30px 0;
+        font-size: 1.3rem;
+      }
+      .detail-menu {
+        width: 100%;
+        height: 110px;
+        padding-bottom: 10px;
+        margin-bottom: 10px;
+        border-bottom: 2px solid #eeeeee;
+
+        display: flex;
+        justify-content: space-between;
+        .detail-menu-info {
+          .menu-title {
+            font-size: 1.2rem;
+            font-weight: bold;
+            margin-bottom: 10px;
+          }
+          .menu-price {
+            font-size: 1.1rem;
+            margin-bottom: 10px;
+          }
+          .menu-desc {
+            font-size: 0.9rem;
+            color: #97a0ac;
+            margin-bottom: 10px;
+          }
+        }
+        img {
+          width: 150px;
+          height: inherit;
+          margin: 0;
+          background-repeat: no-repeat;
+          background-size: contain;
+          background-position: center center;
+        }
+      }
     }
   }
 
   .detail-right {
+    width: 100%;
+    min-width: 96px;
     .detail-store-info {
       width: 100%;
       height: auto;
@@ -55,7 +106,7 @@
 
     .detail-bill {
       width: 100%;
-      height: 300px;
+      min-height: 300px;
 
       border: 1px solid black;
     }
