[#10] Apply Redux Saga ID at DetailPage

--- a/src/components/DetailMenus.scss
+++ b/src/components/DetailMenus.scss
@@ -28,7 +28,7 @@
         margin-bottom: 10px;
       }
     }
-    img {
+    .detail-menu-img {
       width: 150px;
       height: inherit;
       margin: 0;
