--- a/src/components/CatNav.scss
+++ b/src/components/CatNav.scss
@@ -1,9 +1,6 @@
 .catNav {
   width: 100%;
 
-  display: flex;
-  overflow-x: scroll;
-
   padding: 10px 0;
   border-bottom: 2px solid #eeeeee;
   background-color: white;
@@ -14,16 +11,23 @@
   .catNav-category {
     width: 100%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     align-items: center;
-
+    overflow-x: scroll;
     button {
+      padding: 0 50px;
+      white-space: nowrap;
       font-size: 1.2rem;
       font-weight: bold;
     }
   }
-}
-
-.catNav::-webkit-scrollbar {
-  display: none;
+  .catNav-category::-webkit-scrollbar {
+    display: none;
+  }
+  .catNav-category li.on button {
+    background-color: #888;
+    color: #fff;
+    font-weight: bold;
+    font-size: 1.2em;
+  }
 }
