--- a/src/components/DetailMenus.scss
+++ b/src/components/DetailMenus.scss
@@ -3,6 +3,12 @@
     margin: 30px 0;
     font-size: 1.3rem;
   }
+  .detailMenus-category .on {
+    background-color: #888;
+    color: #fff;
+    font-weight: bold;
+    font-size: 1.2em;
+  }
   .detail-menu {
     width: 100%;
     height: 110px;
