[#15] Changed SCSS Store Info Card

--- a/src/components/DetailMenus.scss
+++ b/src/components/DetailMenus.scss
@@ -1,7 +1,10 @@
 .detailMenus {
   .detailMenus-category {
+    background-color: #f5f4f4;
+    padding: 7px;
     margin: 30px 0;
     font-size: 1.3rem;
+    font-weight: 600;
   }
   .detailMenus-category .on {
     background-color: #888;
