--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -7,6 +7,8 @@
 
   display: flex;
   justify-content: space-between;
+
+  cursor: pointer;
   .menu-info {
     .menu-title {
       font-size: 1.2rem;
