--- a/src/components/DetailMenuModal.scss
+++ b/src/components/DetailMenuModal.scss
@@ -1,2 +1,14 @@
 .detail-menu-modal {
+  background-color: #eeeeee;
+  width: 40%;
+  height: 80%;
+
+  overflow-y: scroll;
+
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  padding: 45px;
+  z-index: 1011;
 }
