--- a/src/components/DetailMenuModal.scss
+++ b/src/components/DetailMenuModal.scss
@@ -7,6 +7,7 @@ $grey: #a4adb8;
   background-color: white;
   width: 60%;
   min-width: 300px;
+  max-width: 600px;
   height: 80%;
 
   overflow-y: auto;
