--- a/src/components/SelectOptions.scss
+++ b/src/components/SelectOptions.scss
@@ -9,15 +9,11 @@ $grey: #eeeeee;
     justify-content: space-between;
     p:nth-child(1) {
       font-weight: bold;
+      font-size: 1rem;
     }
     p:nth-child(2) {
       color: $orange;
-    }
-  }
-  .select-menu-option {
-    .select-menu-options {
-      display: flex;
-      justify-content: space-between;
+      font-size: 0.9rem;
     }
   }
 }
