--- a/src/components/Bill.scss
+++ b/src/components/Bill.scss
@@ -1,3 +1,7 @@
+$grey: #f6f6f6;
+$orange: #ea744a;
+$blue: #4eacf8;
+
 .bill {
   position: sticky;
   top: 5px;
@@ -14,14 +18,43 @@
   .bill-content {
     width: 100%;
     min-height: 200px;
+    .bill-content-data {
+      display: flex;
+      flex-direction: column;
+      padding: 10px;
+      p:nth-child(2) {
+        margin-top: 10px;
+        display: flex;
+        align-items: center;
+        svg {
+          padding-right: 5px;
+          font-size: 1.2rem;
+        }
+      }
+    }
+    .bill-content-not-data {
+      width: 100%;
+      min-height: 200px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+
+  .bill-sum-price {
+    width: 100%;
+    height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-right: 10px;
+    border-top: 2px solid #eeeeee;
+    font-weight: bold;
   }
 
   button {
     color: white;
-    background-color: #4ca6eb;
+    background-color: $blue;
     width: 100%;
     height: 50px;
   }
