[#34] Update payment page

--- a/src/pages/MainPage.scss
+++ b/src/pages/MainPage.scss
@@ -1,12 +1,13 @@
-.mainpage{
-    .mainpage-title{
-        .title{
-            max-width: 1068px;
-            margin: 0 auto;
-            
-            hr{
-                opacity: 0.5;
-            }
-        }
+.mainpage {
+  background-color: white;
+  .mainpage-title {
+    .title {
+      max-width: 1068px;
+      margin: 0 auto;
+
+      hr {
+        opacity: 0.5;
+      }
     }
+  }
 }
