--- a/src/components/Bill.scss
+++ b/src/components/Bill.scss
@@ -6,6 +6,7 @@ $blue: #4eacf8;
   min-width: 300px;
   position: sticky;
   top: 5px;
+
   .bill-title {
     background-color: #333333;
     color: white;
@@ -63,16 +64,63 @@ $blue: #4eacf8;
     font-weight: bold;
   }
 
-  button {
-    color: white;
-    background-color: $blue;
-    width: 100%;
-    height: 50px;
-
-    a {
-      width: inherit;
-      height: inherit;
+  .bill-pay_button {
+    button {
       color: white;
+      background-color: $blue;
+      width: 100%;
+      height: 50px;
+
+      div {
+        display: none;
+      }
+
+      a {
+        width: inherit;
+        height: inherit;
+        color: white;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .bill {
+    .bill-title {
+      display: none;
+    }
+    .bill-content {
+      display: none;
+    }
+    .bill-delivery_cost {
+      display: none;
+    }
+    .bill-pay_button {
+      margin-bottom: 54px;
+
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+
+      a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        div {
+          width: 20px;
+          height: 20px;
+          border-radius: 200px;
+          background-color: white;
+          display: block;
+          margin-right: 10px;
+          p {
+            color: $blue;
+            margin-top: 2px;
+            margin-left: 1px;
+          }
+        }
+      }
     }
   }
 }
