--- a/src/components/Details.scss
+++ b/src/components/Details.scss
@@ -41,3 +41,11 @@
     }
   }
 }
+
+@media screen and (max-width: 768px) {
+  .detail-page {
+    margin-bottom: 104px;
+
+    grid-template-columns: 1fr;
+  }
+}
