--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -1,14 +1,26 @@
-.navbar{
-    max-width: 1068px;
-    margin: 0 auto;
-    .navbar-item{
-        display: flex;
-        justify-content: space-evenly;
+.navbar {
+  max-width: 1068px;
+  margin: 0 auto;
+  background-color: white;
+  .navbar-item {
+    display: flex;
+    justify-content: space-evenly;
 
-        li{
-            margin: 15px 0;
-            font-weight: bold;
-            font-size: 1.1rem;
-        }
+    li {
+      margin: 15px 0;
+      font-weight: bold;
+      font-size: 1.1rem;
     }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .navbar {
+    background-color: white;
+    border-top: 1px solid #eeeeee;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
 }
