--- a/src/pages/LoginPage.scss
+++ b/src/pages/LoginPage.scss
@@ -68,31 +68,31 @@
         cursor: pointer;
       }
 
-      .login-register {
-        margin-bottom: 10px;
-        a {
-          padding: 12px 0;
-          text-decoration-color: #0074e9;
-          background-color: #ffffff;
-          border: 0.5px #cccccc solid;
-          border-bottom: 2px #cccccc solid;
-          cursor: pointer;
-          display: inline-block;
-          width: 100%;
-          height: 100%;
-          text-decoration: none;
-          color: #0074e9;
-          font-size: 17px;
-          font-weight: bold;
-          p {
-            text-align: center;
-          }
-        }
-      }
-
       .login-line {
         margin: 15px 0;
         border-bottom: 1px #cccccc solid;
+      }
+    }
+  }
+
+  .login-register {
+    margin-top: 10px;
+    a {
+      padding: 12px 0;
+      text-decoration-color: #0074e9;
+      background-color: #ffffff;
+      border: 0.5px #cccccc solid;
+      border-bottom: 2px #cccccc solid;
+      cursor: pointer;
+      display: inline-block;
+      width: 100%;
+      height: 100%;
+      text-decoration: none;
+      color: #0074e9;
+      font-size: 17px;
+      font-weight: bold;
+      p {
+        text-align: center;
       }
     }
   }
