--- a/src/pages/RegisterPage.scss
+++ b/src/pages/RegisterPage.scss
@@ -4,10 +4,10 @@
   padding: 30px 35.016px;
   max-width: 364px;
 
-  .reg-title {
+  .register-title {
     text-align: center;
 
-    .reg-logo {
+    .register-logo {
       margin-top: 47.234px;
       img {
         width: 195px;
@@ -16,14 +16,14 @@
     }
   }
 
-  .reg-main {
+  .register-main {
     display: flex;
     flex-direction: column;
     p {
       font-size: 16px;
       font-weight: bold;
     }
-    .reg-form {
+    .register-form {
       display: flex;
       flex-direction: column;
       flex-shrink: 1;
@@ -35,20 +35,23 @@
         border: 0.5px #cccccc solid;
         font-size: 16px;
         font-weight: 600;
-        color: #bdaaaa;
+        color: black;
+      }
+      input::placeholder {
+        color: rgb(216, 216, 216);
       }
     }
-    .reg-line {
+    .register-line {
       border-bottom: 1px #cccccc solid;
     }
 
-    .reg-agree-all {
+    .register-agree-all {
       font-size: 18px;
       font-weight: 600;
       margin-bottom: 10px;
     }
 
-    .reg-agree-form {
+    .register-agree-form {
       display: flex;
       flex-direction: column;
       border: 1px #cccccc solid;
@@ -61,7 +64,7 @@
       }
     }
 
-    .reg-submit {
+    .register-submit {
       width: 100%;
       margin-top: 20px;
       background-color: #0074e9;
@@ -74,8 +77,8 @@
     }
   }
 
-  .reg-footer {
-    .reg-copy {
+  .register-footer {
+    .register-copy {
       text-align: center;
       font-size: 13px;
       color: rgba(0, 0, 0, 0.5);
