--- a/src/pages/RegisterPage.scss
+++ b/src/pages/RegisterPage.scss
@@ -23,7 +23,7 @@
       font-size: 16px;
       font-weight: bold;
     }
-    .register-form {
+    .register-content {
       display: flex;
       flex-direction: column;
       flex-shrink: 1;
