--- a/src/components/AllCat.scss
+++ b/src/components/AllCat.scss
@@ -14,6 +14,7 @@
         background-color: #eeeeee;
       }
       p {
+        white-space: nowrap;
         text-align: center;
         font-size: 0.8em;
         margin-top: 5px;
