--- a/src/components/DetailMenuModal.scss
+++ b/src/components/DetailMenuModal.scss
@@ -17,7 +17,6 @@ $blue: #4eacf8;
   position: fixed;
   left: 50%;
   top: 50%;
-  padding: 5px;
   transform: translate(-50%, -50%);
   z-index: 1011;
 
@@ -101,11 +100,26 @@ $blue: #4eacf8;
   }
 
   .detail-model-submit {
+    position: sticky;
+    bottom: 0;
     button {
       background-color: $blue;
       width: 100%;
       height: 50px;
       color: white;
     }
+  }
+}
+
+.detail-menu-modal::-webkit-scrollbar {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  .detail-menu-modal {
+    background-color: white;
+    width: 100%;
+    height: 100%;
+    max-width: 768px;
   }
 }
