--- a/src/components/DetailMenuModal.scss
+++ b/src/components/DetailMenuModal.scss
@@ -10,9 +10,9 @@ $blue: #4eacf8;
   width: 40%;
   min-width: 300px;
   max-width: 600px;
-  height: 80%;
+  max-height: 100%;
 
-  overflow-y: auto;
+  overflow-y: scroll;
 
   position: fixed;
   left: 50%;
@@ -118,14 +118,12 @@ $blue: #4eacf8;
   .detail-menu-modal {
     background-color: white;
     width: 100%;
-    height: 100%;
     max-width: 768px;
+    height: 100%;
 
     .detail-model-submit {
       position: sticky;
       bottom: 0;
-      left: 0;
-      right: 0;
       button {
         background-color: $blue;
         width: 100%;
