--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -10,36 +10,24 @@ $blue: #4eacf8;
   text-align: center;
 
   display: grid;
-  grid-template-columns: 2fr 6fr 2fr;
+  grid-template-columns: 2fr 5fr 2fr;
   column-gap: 5px;
 
   justify-content: center;
   align-items: center;
 
-  .header_seaerch {
-    background-color: #f3f3f3;
-    border-radius: 100px;
+  .header-address {
     display: flex;
-    padding: 5px;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    input {
-      border: none;
-      margin-left: 10px;
-      padding: 5px;
-      width: 90%;
-      border-radius: 30px;
-      background-color: #f3f3f3;
 
-      color: #9e9e9e;
-      font-weight: bold;
+    .header-address-arrow {
+      color: #4eacf8;
     }
-    input:hover {
-      border: none;
-    }
-    svg {
-      font-size: 1.5rem;
-      margin-left: 10px;
+
+    p {
+      padding: 0 10px;
+      font-size: 0.9em;
     }
   }
 
